# eddy-footprint

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Footprint_generation.ipynb  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yaml  pypi-release.yaml  testpypi-release.yaml
binder/: environment.yml
ci/: doc.yml  environment.yml
data/: demo.csv  eddy_cov_C_fluxes_nofilter_YKD.csv  neutral_test.csv  stable_test.csv  unstable_test.csv
doc/: api.rst  conf.py  demo.ipynb  index.rst  tutorials-and-presentations.rst
doc/_static/: switcher.json
doc/source/: conf.py  index.rst
eddy_footprint/: __init__.py  core.py  models.py  spatial.py
notebooks/: Footprint_generation.ipynb
paper/: Ludwig_BG2023_footprint_ensembles.ipynb  README.md  eddy_cov_C_fluxes_nofilter_YKD.csv  landcover_footprint_extent.tif
tests/: test_calc_footprint.py
tests/data/: 2019-07-11T000000_H.tif  2019-07-11T000000_KM.tif  flux_data_ex.csv
